// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Search filters options 1`] = `
"<div class=\\"_trigger_0c7521\\">
  <div class=\\"_Field_342682 _button_342682\\">
    <div class=\\"_inner_342682\\">
      <p data-nowrap=\\"\\">
        <!--v-if-->Option 0
      </p><input style=\\"position: fixed; pointer-events: none; opacity: 0;\\">
    </div><span class=\\"_icon_db495d material-symbols-outlined\\">arrow_drop_down</span>
  </div>
</div>
<teleport-stub to=\\"body\\">
  <div class=\\"_Dropdown_0c7521\\" style=\\"min-width: 0px; left: 0px; max-width: 76px; top: 1px; max-height: 75px;\\">
    <div class=\\"_el_665c14 dodo-gap-0 dodo-pad-1 dodo-pad-1 _content_0c7521\\">
      <div class=\\"_el_665c14 dodo-gap-0\\" style=\\"min-height: 0;\\">
        <div class=\\"_el_109a5d dodo-pad-2 _searchbox_53a782\\">
          <div class=\\"_Field_342682 _TextInput_6615c1\\" tabindex=\\"0\\" style=\\"flex-grow: 1;\\">
            <div class=\\"_inner_342682\\"><input class=\\"_input_6615c1\\" placeholder=\\"Search\\" type=\\"search\\"></div>
          </div>
        </div>
        <div class=\\"_ScrollContainer_6a6642\\" style=\\"\\">
          <!--v-if-->
          <div class=\\"_DropdownItem_8d9fa1\\">
            <div class=\\"_el_665c14 dodo-gap-0\\" style=\\"flex: 1;\\">
              <p data-nowrap=\\"\\" class=\\"_text_8d9fa1\\">
                <!-- @slot Customize option html -->Option 2
              </p>
              <!--v-if-->
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</teleport-stub>"
`;

exports[`Search input visible after character key press 1`] = `
"<div class=\\"_trigger_0c7521\\">
  <div class=\\"_Field_342682 _button_342682\\">
    <div class=\\"_inner_342682\\">
      <p data-nowrap=\\"\\">
        <!--v-if-->Option 0
      </p><input style=\\"position: fixed; pointer-events: none; opacity: 0;\\">
    </div><span class=\\"_icon_db495d material-symbols-outlined\\">arrow_drop_down</span>
  </div>
</div>
<teleport-stub to=\\"body\\">
  <div class=\\"_Dropdown_0c7521\\" style=\\"min-width: 0px; left: 0px; max-width: 76px; top: 1px; max-height: 75px;\\">
    <div class=\\"_el_665c14 dodo-gap-0 dodo-pad-1 dodo-pad-1 _content_0c7521\\">
      <div class=\\"_el_665c14 dodo-gap-0\\" style=\\"min-height: 0;\\">
        <div class=\\"_el_109a5d dodo-pad-2 _searchbox_53a782\\" style=\\"\\">
          <div class=\\"_Field_342682 _TextInput_6615c1\\" tabindex=\\"0\\" style=\\"flex-grow: 1;\\">
            <div class=\\"_inner_342682\\"><input class=\\"_input_6615c1\\" placeholder=\\"Search\\" type=\\"search\\"></div>
          </div>
        </div>
        <div class=\\"_ScrollContainer_6a6642\\" style=\\"\\"></div>
      </div>
    </div>
  </div>
</teleport-stub>"
`;

exports[`Search input visible if many options 1`] = `
"<div class=\\"_trigger_0c7521\\">
  <div class=\\"_Field_342682 _button_342682\\">
    <div class=\\"_inner_342682\\">
      <p data-nowrap=\\"\\">
        <!--v-if-->Option 0
      </p><input style=\\"position: fixed; pointer-events: none; opacity: 0;\\">
    </div><span class=\\"_icon_db495d material-symbols-outlined\\">arrow_drop_down</span>
  </div>
</div>
<teleport-stub to=\\"body\\">
  <div class=\\"_Dropdown_0c7521\\" style=\\"min-width: 0px; left: 0px; max-width: 76px; top: 1px; max-height: 75px;\\">
    <div class=\\"_el_665c14 dodo-gap-0 dodo-pad-1 dodo-pad-1 _content_0c7521\\">
      <div class=\\"_el_665c14 dodo-gap-0\\" style=\\"min-height: 0;\\">
        <div class=\\"_el_109a5d dodo-pad-2 _searchbox_53a782\\">
          <div class=\\"_Field_342682 _TextInput_6615c1\\" tabindex=\\"0\\" style=\\"flex-grow: 1;\\">
            <div class=\\"_inner_342682\\"><input class=\\"_input_6615c1\\" placeholder=\\"Search\\" type=\\"search\\"></div>
          </div>
        </div>
        <div class=\\"_ScrollContainer_6a6642\\" style=\\"\\">
          <!--v-if-->
          <div data-selectactive=\\"true\\" class=\\"_DropdownItem_8d9fa1 _active_8d9fa1\\">
            <div class=\\"_el_665c14 dodo-gap-0\\" style=\\"flex: 1;\\">
              <p data-nowrap=\\"\\" class=\\"_text_8d9fa1\\">
                <!-- @slot Customize option html -->Option 0
              </p>
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <div class=\\"_DropdownItem_8d9fa1\\">
            <div class=\\"_el_665c14 dodo-gap-0\\" style=\\"flex: 1;\\">
              <p data-nowrap=\\"\\" class=\\"_text_8d9fa1\\">
                <!-- @slot Customize option html -->Option 1
              </p>
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <div class=\\"_DropdownItem_8d9fa1\\">
            <div class=\\"_el_665c14 dodo-gap-0\\" style=\\"flex: 1;\\">
              <p data-nowrap=\\"\\" class=\\"_text_8d9fa1\\">
                <!-- @slot Customize option html -->Option 2
              </p>
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <div class=\\"_DropdownItem_8d9fa1\\">
            <div class=\\"_el_665c14 dodo-gap-0\\" style=\\"flex: 1;\\">
              <p data-nowrap=\\"\\" class=\\"_text_8d9fa1\\">
                <!-- @slot Customize option html -->Option 3
              </p>
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <div class=\\"_DropdownItem_8d9fa1\\">
            <div class=\\"_el_665c14 dodo-gap-0\\" style=\\"flex: 1;\\">
              <p data-nowrap=\\"\\" class=\\"_text_8d9fa1\\">
                <!-- @slot Customize option html -->Option 4
              </p>
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <div class=\\"_DropdownItem_8d9fa1\\">
            <div class=\\"_el_665c14 dodo-gap-0\\" style=\\"flex: 1;\\">
              <p data-nowrap=\\"\\" class=\\"_text_8d9fa1\\">
                <!-- @slot Customize option html -->Option 5
              </p>
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <div class=\\"_DropdownItem_8d9fa1\\">
            <div class=\\"_el_665c14 dodo-gap-0\\" style=\\"flex: 1;\\">
              <p data-nowrap=\\"\\" class=\\"_text_8d9fa1\\">
                <!-- @slot Customize option html -->Option 6
              </p>
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <div class=\\"_DropdownItem_8d9fa1\\">
            <div class=\\"_el_665c14 dodo-gap-0\\" style=\\"flex: 1;\\">
              <p data-nowrap=\\"\\" class=\\"_text_8d9fa1\\">
                <!-- @slot Customize option html -->Option 7
              </p>
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <div class=\\"_DropdownItem_8d9fa1\\">
            <div class=\\"_el_665c14 dodo-gap-0\\" style=\\"flex: 1;\\">
              <p data-nowrap=\\"\\" class=\\"_text_8d9fa1\\">
                <!-- @slot Customize option html -->Option 8
              </p>
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <div class=\\"_DropdownItem_8d9fa1\\">
            <div class=\\"_el_665c14 dodo-gap-0\\" style=\\"flex: 1;\\">
              <p data-nowrap=\\"\\" class=\\"_text_8d9fa1\\">
                <!-- @slot Customize option html -->Option 9
              </p>
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <div class=\\"_DropdownItem_8d9fa1\\">
            <div class=\\"_el_665c14 dodo-gap-0\\" style=\\"flex: 1;\\">
              <p data-nowrap=\\"\\" class=\\"_text_8d9fa1\\">
                <!-- @slot Customize option html -->Option 10
              </p>
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <div class=\\"_DropdownItem_8d9fa1\\">
            <div class=\\"_el_665c14 dodo-gap-0\\" style=\\"flex: 1;\\">
              <p data-nowrap=\\"\\" class=\\"_text_8d9fa1\\">
                <!-- @slot Customize option html -->Option 11
              </p>
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <div class=\\"_DropdownItem_8d9fa1\\">
            <div class=\\"_el_665c14 dodo-gap-0\\" style=\\"flex: 1;\\">
              <p data-nowrap=\\"\\" class=\\"_text_8d9fa1\\">
                <!-- @slot Customize option html -->Option 12
              </p>
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <div class=\\"_DropdownItem_8d9fa1\\">
            <div class=\\"_el_665c14 dodo-gap-0\\" style=\\"flex: 1;\\">
              <p data-nowrap=\\"\\" class=\\"_text_8d9fa1\\">
                <!-- @slot Customize option html -->Option 13
              </p>
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <div class=\\"_DropdownItem_8d9fa1\\">
            <div class=\\"_el_665c14 dodo-gap-0\\" style=\\"flex: 1;\\">
              <p data-nowrap=\\"\\" class=\\"_text_8d9fa1\\">
                <!-- @slot Customize option html -->Option 14
              </p>
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <div class=\\"_DropdownItem_8d9fa1\\">
            <div class=\\"_el_665c14 dodo-gap-0\\" style=\\"flex: 1;\\">
              <p data-nowrap=\\"\\" class=\\"_text_8d9fa1\\">
                <!-- @slot Customize option html -->Option 15
              </p>
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <div class=\\"_DropdownItem_8d9fa1\\">
            <div class=\\"_el_665c14 dodo-gap-0\\" style=\\"flex: 1;\\">
              <p data-nowrap=\\"\\" class=\\"_text_8d9fa1\\">
                <!-- @slot Customize option html -->Option 16
              </p>
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <div class=\\"_DropdownItem_8d9fa1\\">
            <div class=\\"_el_665c14 dodo-gap-0\\" style=\\"flex: 1;\\">
              <p data-nowrap=\\"\\" class=\\"_text_8d9fa1\\">
                <!-- @slot Customize option html -->Option 17
              </p>
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <div class=\\"_DropdownItem_8d9fa1\\">
            <div class=\\"_el_665c14 dodo-gap-0\\" style=\\"flex: 1;\\">
              <p data-nowrap=\\"\\" class=\\"_text_8d9fa1\\">
                <!-- @slot Customize option html -->Option 18
              </p>
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <div class=\\"_DropdownItem_8d9fa1\\">
            <div class=\\"_el_665c14 dodo-gap-0\\" style=\\"flex: 1;\\">
              <p data-nowrap=\\"\\" class=\\"_text_8d9fa1\\">
                <!-- @slot Customize option html -->Option 19
              </p>
              <!--v-if-->
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</teleport-stub>"
`;

exports[`Select a value 1`] = `
"<div class=\\"_trigger_0c7521\\">
  <div class=\\"_Field_342682 _button_342682\\">
    <div class=\\"_inner_342682\\">
      <p data-nowrap=\\"\\">
        <!--v-if-->Option 0
      </p><input style=\\"position: fixed; pointer-events: none; opacity: 0;\\">
    </div><span class=\\"_icon_db495d material-symbols-outlined\\">arrow_drop_down</span>
  </div>
</div>
<teleport-stub to=\\"body\\">
  <!--v-if-->
</teleport-stub>"
`;

exports[`Select can be disabled 1`] = `
"<div class=\\"_trigger_0c7521 _disabled_0c7521\\">
  <div class=\\"_Field_342682 _disabled_342682 _button_342682\\">
    <div class=\\"_inner_342682\\">
      <p data-nowrap=\\"\\">
        <!--v-if-->Option 0
      </p><input style=\\"position: fixed; pointer-events: none; opacity: 0;\\" disabled=\\"\\">
    </div><span class=\\"_icon_db495d material-symbols-outlined\\">arrow_drop_down</span>
  </div>
</div>
<teleport-stub to=\\"body\\">
  <!--v-if-->
</teleport-stub>"
`;
